--- a/package.json
+++ b/package.json
@@ -79,9 +79,9 @@
     "workbox-webpack-plugin": "5.1.4"
   },
   "scripts": {
-    "start-line1": "cross-env NODE_ENV=development LINE_TYPE=line1 node scripts/start.js",
-    "build-line1-rd": "cross-env NODE_ENV=development LINE_TYPE=line1 node scripts/build.js",
-    "build-line1": "cross-env NODE_ENV=production LINE_TYPE=line1 node scripts/build.js",
+    "start": "cross-env NODE_ENV=development LINE_TYPE=line1 node scripts/start.js",
+    "build-rd": "cross-env NODE_ENV=development LINE_TYPE=line1 node scripts/build.js",
+    "build": "cross-env NODE_ENV=production LINE_TYPE=line1 node scripts/build.js",
     "test": "node scripts/test.js"
   },
   "eslintConfig": {
