--- a/package.json
+++ b/package.json
@@ -81,7 +81,7 @@
   "scripts": {
     "start": "cross-env NODE_ENV=development LINE_TYPE=line1 PUBLIC_URL=caterpillar node scripts/start.js",
     "build-rd": "cross-env NODE_ENV=development LINE_TYPE=line1 PUBLIC_URL=caterpillar node scripts/build.js",
-    "build": "cross-env NODE_ENV=production LINE_TYPE=line1 node PUBLIC_URL=caterpillar scripts/build.js",
+    "build": "cross-env NODE_ENV=production LINE_TYPE=line1  PUBLIC_URL=caterpillar node scripts/build.js",
     "test": "node scripts/test.js"
   },
   "eslintConfig": {
